--- a/edu.jorge.proyectodaw/frontend/proyecto-react/src/pages/RegisterPage.module.css
+++ b/edu.jorge.proyectodaw/frontend/proyecto-react/src/pages/RegisterPage.module.css
@@ -1,16 +1,18 @@
 .container {
-  min-height: 80vh;
+  min-height: 100vh;
   background: linear-gradient(to bottom, #2d1282, #ffffff);
-  padding-top: 20px;
+  padding-top: 97px;
   font-family: "Poppins", system-ui, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 .mainContent {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 80vh;
-  padding: 40px 24px 20px;
+  flex: 1;
+  padding: 40px 24px;
 }
 
 .formContainer {
